# ibazel_repro

./: .gitignore
src/app/: BUILD.bazel  app.component.html  app.component.ts  app.module.ts
src/app/Module000000/: BUILD.bazel  Module000000.module.ts  my.000000.component.html  my.000000.component.ts  my.000001.component.html  my.000001.component.ts  my.000002.component.html  my.000002.component.ts  my.000003.component.html  my.000003.component.ts  my.000004.component.ts  my.000005.component.ts  my.000006.component.ts  my.000007.component.ts  my.000008.component.ts
src/app/Module000001/: BUILD.bazel  Module000001.module.ts  my.000007.component.html  my.000008.component.html  my.000009.component.ts  my.000010.component.html  my.000010.component.ts  my.000011.component.html  my.000011.component.ts  my.000012.component.html  my.000012.component.ts  my.000013.component.ts
src/app/Module000002/: BUILD.bazel  Module000002.module.ts  my.000014.component.html  my.000014.component.ts  my.000015.component.html  my.000015.component.ts  my.000016.component.html  my.000016.component.ts  my.000017.component.ts  my.000018.component.ts  my.000019.component.html  my.000019.component.ts  my.000020.component.html  my.000020.component.ts  my.000021.component.html  my.000023.component.ts  my.000024.component.ts  my.000026.component.ts
src/app/Module000003/: BUILD.bazel  Module000003.module.ts  my.000021.component.html  my.000021.component.ts  my.000022.component.html  my.000022.component.ts  my.000023.component.html  my.000025.component.ts  my.000027.component.html  my.000027.component.ts  my.000028.component.html  my.000029.component.html  my.000030.component.html  my.000030.component.ts  my.000033.component.ts
src/app/Module000004/: BUILD.bazel  Module000004.module.ts  my.000028.component.html  my.000028.component.ts  my.000029.component.html  my.000029.component.ts  my.000030.component.html  my.000031.component.ts  my.000032.component.ts  my.000034.component.ts  my.000036.component.html  my.000037.component.html  my.000037.component.ts  my.000038.component.html  my.000038.component.ts  my.000040.component.ts  my.000042.component.ts  my.000044.component.ts
src/app/Module000005/: BUILD.bazel  Module000005.module.ts  my.000035.component.html  my.000035.component.ts  my.000036.component.html  my.000036.component.ts  my.000037.component.html  my.000039.component.ts  my.000045.component.html  my.000047.component.ts  my.000050.component.ts  my.000051.component.ts  my.000052.component.ts
src/app/Module000006/: BUILD.bazel  Module000006.module.ts  my.000041.component.html  my.000041.component.ts  my.000042.component.html  my.000043.component.html  my.000043.component.ts  my.000044.component.html  my.000045.component.ts  my.000046.component.ts  my.000048.component.ts  my.000054.component.html  my.000055.component.html  my.000056.component.ts  my.000057.component.html  my.000062.component.ts
src/app/Module000007/: BUILD.bazel  Module000007.module.ts  my.000047.component.html  my.000048.component.html  my.000049.component.html  my.000049.component.ts  my.000050.component.html  my.000051.component.html  my.000055.component.ts  my.000063.component.ts  my.000064.component.html
src/app/Module000008/: BUILD.bazel  Module000008.module.ts  my.000053.component.ts  my.000054.component.html  my.000054.component.ts  my.000055.component.html  my.000057.component.html  my.000057.component.ts  my.000058.component.html  my.000058.component.ts  my.000059.component.ts  my.000071.component.html  my.000072.component.html  my.000073.component.html  my.000074.component.html  my.000075.component.ts
src/app/Module000009/: BUILD.bazel  Module000009.module.ts  my.000059.component.html  my.000060.component.html  my.000060.component.ts  my.000061.component.html  my.000061.component.ts  my.000063.component.html  my.000064.component.ts  my.000065.component.html  my.000080.component.ts  my.000081.component.html  my.000082.component.html
src/app/Module000010/: BUILD.bazel  Module000010.module.ts  my.000065.component.ts  my.000066.component.ts  my.000067.component.html  my.000067.component.ts  my.000068.component.ts  my.000069.component.ts  my.000070.component.html  my.000070.component.ts  my.000071.component.html  my.000071.component.ts  my.000072.component.html  my.000076.component.ts  my.000087.component.html  my.000090.component.html  my.000091.component.ts  my.000094.component.ts
src/app/Module000011/: BUILD.bazel  Module000011.module.ts  my.000072.component.ts  my.000073.component.html  my.000073.component.ts  my.000074.component.ts  my.000079.component.html  my.000097.component.html  my.000098.component.html  my.000098.component.ts
src/app/Module000012/: BUILD.bazel  Module000012.module.ts  my.000077.component.html  my.000077.component.ts  my.000078.component.html  my.000078.component.ts  my.000079.component.html  my.000079.component.ts  my.000081.component.ts  my.000082.component.ts  my.000084.component.html  my.000085.component.html  my.000086.component.html  my.000103.component.html  my.000103.component.ts  my.000105.component.ts  my.000106.component.html  my.000109.component.ts
src/app/Module000013/: BUILD.bazel  Module000013.module.ts  my.000083.component.ts  my.000084.component.html  my.000084.component.ts  my.000085.component.html  my.000085.component.ts  my.000086.component.ts  my.000087.component.ts  my.000088.component.ts  my.000092.component.html  my.000111.component.html  my.000111.component.ts  my.000113.component.html  my.000114.component.html  my.000114.component.ts  my.000115.component.ts  my.000117.component.ts
src/app/Module000014/: BUILD.bazel  Module000014.module.ts  my.000089.component.html  my.000089.component.ts  my.000090.component.html  my.000090.component.ts  my.000092.component.ts  my.000093.component.ts  my.000098.component.html  my.000099.component.html  my.000100.component.html  my.000102.component.ts  my.000122.component.html
src/app/Module000015/: BUILD.bazel  Module000015.module.ts  my.000095.component.html  my.000095.component.ts  my.000096.component.html  (+13 more)
(+3772 files in other folders)
