load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["app.server.module.ts"],
    ),
    angular_assets = ["app.component.html"],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ] + [
    "//src/app/Module000000",
    "//src/app/Module000001",
    "//src/app/Module000002",
    "//src/app/Module000003",
    "//src/app/Module000004",
    "//src/app/Module000005",
    "//src/app/Module000006",
    "//src/app/Module000007",
    "//src/app/Module000008",
    "//src/app/Module000009",
    "//src/app/Module000010",
    "//src/app/Module000011",
    "//src/app/Module000012",
    "//src/app/Module000013",
    "//src/app/Module000014",
    "//src/app/Module000015",
    "//src/app/Module000016",
    "//src/app/Module000017",
    "//src/app/Module000018",
    "//src/app/Module000019",
    "//src/app/Module000020",
    "//src/app/Module000021",
    "//src/app/Module000022",
    "//src/app/Module000023",
    "//src/app/Module000024",
    "//src/app/Module000025",
    "//src/app/Module000026",
    "//src/app/Module000027",
    "//src/app/Module000028",
    "//src/app/Module000029",
    "//src/app/Module000030",
    "//src/app/Module000031",
    "//src/app/Module000032",
    "//src/app/Module000033",
    "//src/app/Module000034",
    "//src/app/Module000035",
    "//src/app/Module000036",
    "//src/app/Module000037",
    "//src/app/Module000038",
    "//src/app/Module000039",
    "//src/app/Module000040",
    "//src/app/Module000041",
    "//src/app/Module000042",
    "//src/app/Module000043",
    "//src/app/Module000044",
    "//src/app/Module000045",
    "//src/app/Module000046",
    "//src/app/Module000047",
    "//src/app/Module000048"
],
)

ng_ts_library(
    name = "app_server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//src:tsconfig-server",
    deps = [
        ":app",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
