load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["app.server.module.ts"],
    ),
    angular_assets = ["app.component.html"],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ] + [
    "//src/app/Module000000",
    "//src/app/Module000001",
    "//src/app/Module000002",
    "//src/app/Module000003",
    "//src/app/Module000004",
    "//src/app/Module000005",
    "//src/app/Module000006",
    "//src/app/Module000007",
    "//src/app/Module000008",
    "//src/app/Module000009",
    "//src/app/Module000010",
    "//src/app/Module000011",
    "//src/app/Module000012",
    "//src/app/Module000013",
    "//src/app/Module000014",
    "//src/app/Module000015",
    "//src/app/Module000016",
    "//src/app/Module000017",
    "//src/app/Module000018",
    "//src/app/Module000019",
    "//src/app/Module000020",
    "//src/app/Module000021",
    "//src/app/Module000022",
    "//src/app/Module000023",
    "//src/app/Module000024",
    "//src/app/Module000025",
    "//src/app/Module000026",
    "//src/app/Module000027",
    "//src/app/Module000028",
    "//src/app/Module000029",
    "//src/app/Module000030",
    "//src/app/Module000031",
    "//src/app/Module000032",
    "//src/app/Module000033",
    "//src/app/Module000034",
    "//src/app/Module000035",
    "//src/app/Module000036",
    "//src/app/Module000037",
    "//src/app/Module000038",
    "//src/app/Module000039",
    "//src/app/Module000040",
    "//src/app/Module000041",
    "//src/app/Module000042",
    "//src/app/Module000043",
    "//src/app/Module000044",
    "//src/app/Module000045",
    "//src/app/Module000046",
    "//src/app/Module000047",
    "//src/app/Module000048",
    "//src/app/Module000049",
    "//src/app/Module000050",
    "//src/app/Module000051",
    "//src/app/Module000052",
    "//src/app/Module000053",
    "//src/app/Module000054",
    "//src/app/Module000055",
    "//src/app/Module000056",
    "//src/app/Module000057",
    "//src/app/Module000058",
    "//src/app/Module000059",
    "//src/app/Module000060",
    "//src/app/Module000061",
    "//src/app/Module000062",
    "//src/app/Module000063",
    "//src/app/Module000064",
    "//src/app/Module000065",
    "//src/app/Module000066",
    "//src/app/Module000067",
    "//src/app/Module000068",
    "//src/app/Module000069",
    "//src/app/Module000070",
    "//src/app/Module000071",
    "//src/app/Module000072",
    "//src/app/Module000073",
    "//src/app/Module000074",
    "//src/app/Module000075",
    "//src/app/Module000076",
    "//src/app/Module000077",
    "//src/app/Module000078",
    "//src/app/Module000079",
    "//src/app/Module000080",
    "//src/app/Module000081",
    "//src/app/Module000082",
    "//src/app/Module000083",
    "//src/app/Module000084",
    "//src/app/Module000085",
    "//src/app/Module000086",
    "//src/app/Module000087",
    "//src/app/Module000088",
    "//src/app/Module000089",
    "//src/app/Module000090",
    "//src/app/Module000091",
    "//src/app/Module000092",
    "//src/app/Module000093",
    "//src/app/Module000094",
    "//src/app/Module000095",
    "//src/app/Module000096",
    "//src/app/Module000097",
    "//src/app/Module000098",
    "//src/app/Module000099",
    "//src/app/Module000100",
    "//src/app/Module000101",
    "//src/app/Module000102",
    "//src/app/Module000103",
    "//src/app/Module000104",
    "//src/app/Module000105",
    "//src/app/Module000106",
    "//src/app/Module000107",
    "//src/app/Module000108",
    "//src/app/Module000109",
    "//src/app/Module000110",
    "//src/app/Module000111",
    "//src/app/Module000112",
    "//src/app/Module000113",
    "//src/app/Module000114",
    "//src/app/Module000115",
    "//src/app/Module000116",
    "//src/app/Module000117",
    "//src/app/Module000118",
    "//src/app/Module000119",
    "//src/app/Module000120",
    "//src/app/Module000121",
    "//src/app/Module000122",
    "//src/app/Module000123",
    "//src/app/Module000124",
    "//src/app/Module000125",
    "//src/app/Module000126",
    "//src/app/Module000127",
    "//src/app/Module000128",
    "//src/app/Module000129",
    "//src/app/Module000130",
    "//src/app/Module000131",
    "//src/app/Module000132",
    "//src/app/Module000133",
    "//src/app/Module000134",
    "//src/app/Module000135",
    "//src/app/Module000136",
    "//src/app/Module000137",
    "//src/app/Module000138",
    "//src/app/Module000139",
    "//src/app/Module000140",
    "//src/app/Module000141",
    "//src/app/Module000142",
    "//src/app/Module000143",
    "//src/app/Module000144",
    "//src/app/Module000145",
    "//src/app/Module000146",
    "//src/app/Module000147",
    "//src/app/Module000148"
],
)

ng_ts_library(
    name = "app_server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//src:tsconfig-server",
    deps = [
        ":app",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
