load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["app.server.module.ts"],
    ),
    angular_assets = ["app.component.html"],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ] + [
    "//src/app/Module000000",
    "//src/app/Module000001",
    "//src/app/Module000002",
    "//src/app/Module000003",
    "//src/app/Module000004",
    "//src/app/Module000005",
    "//src/app/Module000006",
    "//src/app/Module000007",
    "//src/app/Module000008",
    "//src/app/Module000009",
    "//src/app/Module000010",
    "//src/app/Module000011",
    "//src/app/Module000012",
    "//src/app/Module000013",
    "//src/app/Module000014",
    "//src/app/Module000015",
    "//src/app/Module000016",
    "//src/app/Module000017",
    "//src/app/Module000018",
    "//src/app/Module000019",
    "//src/app/Module000020",
    "//src/app/Module000021",
    "//src/app/Module000022",
    "//src/app/Module000023",
    "//src/app/Module000024",
    "//src/app/Module000025",
    "//src/app/Module000026",
    "//src/app/Module000027",
    "//src/app/Module000028",
    "//src/app/Module000029",
    "//src/app/Module000030",
    "//src/app/Module000031",
    "//src/app/Module000032",
    "//src/app/Module000033",
    "//src/app/Module000034",
    "//src/app/Module000035",
    "//src/app/Module000036",
    "//src/app/Module000037",
    "//src/app/Module000038",
    "//src/app/Module000039",
    "//src/app/Module000040",
    "//src/app/Module000041",
    "//src/app/Module000042",
    "//src/app/Module000043",
    "//src/app/Module000044",
    "//src/app/Module000045",
    "//src/app/Module000046",
    "//src/app/Module000047",
    "//src/app/Module000048",
    "//src/app/Module000049",
    "//src/app/Module000050",
    "//src/app/Module000051",
    "//src/app/Module000052",
    "//src/app/Module000053",
    "//src/app/Module000054",
    "//src/app/Module000055",
    "//src/app/Module000056",
    "//src/app/Module000057",
    "//src/app/Module000058",
    "//src/app/Module000059",
    "//src/app/Module000060",
    "//src/app/Module000061",
    "//src/app/Module000062",
    "//src/app/Module000063",
    "//src/app/Module000064",
    "//src/app/Module000065",
    "//src/app/Module000066",
    "//src/app/Module000067",
    "//src/app/Module000068",
    "//src/app/Module000069",
    "//src/app/Module000070",
    "//src/app/Module000071",
    "//src/app/Module000072",
    "//src/app/Module000073",
    "//src/app/Module000074",
    "//src/app/Module000075",
    "//src/app/Module000076",
    "//src/app/Module000077",
    "//src/app/Module000078",
    "//src/app/Module000079",
    "//src/app/Module000080",
    "//src/app/Module000081",
    "//src/app/Module000082",
    "//src/app/Module000083",
    "//src/app/Module000084",
    "//src/app/Module000085",
    "//src/app/Module000086",
    "//src/app/Module000087",
    "//src/app/Module000088",
    "//src/app/Module000089",
    "//src/app/Module000090",
    "//src/app/Module000091",
    "//src/app/Module000092",
    "//src/app/Module000093",
    "//src/app/Module000094",
    "//src/app/Module000095",
    "//src/app/Module000096",
    "//src/app/Module000097",
    "//src/app/Module000098",
    "//src/app/Module000099",
    "//src/app/Module000100",
    "//src/app/Module000101",
    "//src/app/Module000102",
    "//src/app/Module000103",
    "//src/app/Module000104",
    "//src/app/Module000105",
    "//src/app/Module000106",
    "//src/app/Module000107",
    "//src/app/Module000108",
    "//src/app/Module000109",
    "//src/app/Module000110",
    "//src/app/Module000111",
    "//src/app/Module000112",
    "//src/app/Module000113",
    "//src/app/Module000114",
    "//src/app/Module000115",
    "//src/app/Module000116",
    "//src/app/Module000117",
    "//src/app/Module000118",
    "//src/app/Module000119",
    "//src/app/Module000120",
    "//src/app/Module000121",
    "//src/app/Module000122",
    "//src/app/Module000123",
    "//src/app/Module000124",
    "//src/app/Module000125",
    "//src/app/Module000126",
    "//src/app/Module000127",
    "//src/app/Module000128",
    "//src/app/Module000129",
    "//src/app/Module000130",
    "//src/app/Module000131",
    "//src/app/Module000132",
    "//src/app/Module000133",
    "//src/app/Module000134",
    "//src/app/Module000135",
    "//src/app/Module000136",
    "//src/app/Module000137",
    "//src/app/Module000138",
    "//src/app/Module000139",
    "//src/app/Module000140",
    "//src/app/Module000141",
    "//src/app/Module000142",
    "//src/app/Module000143",
    "//src/app/Module000144",
    "//src/app/Module000145",
    "//src/app/Module000146",
    "//src/app/Module000147",
    "//src/app/Module000148",
    "//src/app/Module000149",
    "//src/app/Module000150",
    "//src/app/Module000151",
    "//src/app/Module000152",
    "//src/app/Module000153",
    "//src/app/Module000154",
    "//src/app/Module000155",
    "//src/app/Module000156",
    "//src/app/Module000157",
    "//src/app/Module000158",
    "//src/app/Module000159",
    "//src/app/Module000160",
    "//src/app/Module000161",
    "//src/app/Module000162",
    "//src/app/Module000163",
    "//src/app/Module000164",
    "//src/app/Module000165",
    "//src/app/Module000166",
    "//src/app/Module000167",
    "//src/app/Module000168",
    "//src/app/Module000169",
    "//src/app/Module000170",
    "//src/app/Module000171",
    "//src/app/Module000172",
    "//src/app/Module000173",
    "//src/app/Module000174",
    "//src/app/Module000175",
    "//src/app/Module000176",
    "//src/app/Module000177",
    "//src/app/Module000178",
    "//src/app/Module000179",
    "//src/app/Module000180",
    "//src/app/Module000181",
    "//src/app/Module000182",
    "//src/app/Module000183",
    "//src/app/Module000184",
    "//src/app/Module000185",
    "//src/app/Module000186",
    "//src/app/Module000187",
    "//src/app/Module000188",
    "//src/app/Module000189",
    "//src/app/Module000190",
    "//src/app/Module000191",
    "//src/app/Module000192",
    "//src/app/Module000193",
    "//src/app/Module000194",
    "//src/app/Module000195",
    "//src/app/Module000196",
    "//src/app/Module000197",
    "//src/app/Module000198",
    "//src/app/Module000199",
    "//src/app/Module000200",
    "//src/app/Module000201",
    "//src/app/Module000202",
    "//src/app/Module000203",
    "//src/app/Module000204",
    "//src/app/Module000205",
    "//src/app/Module000206",
    "//src/app/Module000207",
    "//src/app/Module000208",
    "//src/app/Module000209",
    "//src/app/Module000210",
    "//src/app/Module000211",
    "//src/app/Module000212",
    "//src/app/Module000213",
    "//src/app/Module000214",
    "//src/app/Module000215",
    "//src/app/Module000216",
    "//src/app/Module000217",
    "//src/app/Module000218",
    "//src/app/Module000219",
    "//src/app/Module000220",
    "//src/app/Module000221",
    "//src/app/Module000222",
    "//src/app/Module000223",
    "//src/app/Module000224",
    "//src/app/Module000225",
    "//src/app/Module000226",
    "//src/app/Module000227",
    "//src/app/Module000228",
    "//src/app/Module000229",
    "//src/app/Module000230",
    "//src/app/Module000231",
    "//src/app/Module000232",
    "//src/app/Module000233",
    "//src/app/Module000234",
    "//src/app/Module000235",
    "//src/app/Module000236",
    "//src/app/Module000237",
    "//src/app/Module000238",
    "//src/app/Module000239",
    "//src/app/Module000240",
    "//src/app/Module000241",
    "//src/app/Module000242",
    "//src/app/Module000243",
    "//src/app/Module000244",
    "//src/app/Module000245",
    "//src/app/Module000246",
    "//src/app/Module000247",
    "//src/app/Module000248"
],
)

ng_ts_library(
    name = "app_server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//src:tsconfig-server",
    deps = [
        ":app",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
