load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000001",
    srcs = [
  "Module000001.module.ts",
  "my.000007.component.ts",
  "my.000008.component.ts",
  "my.000009.component.ts",
  "my.000010.component.ts",
  "my.000011.component.ts",
  "my.000012.component.ts",
  "my.000013.component.ts"
],
    angular_assets = [
  "my.000007.component.html",
  "my.000008.component.html",
  "my.000009.component.html",
  "my.000010.component.html",
  "my.000011.component.html",
  "my.000012.component.html",
  "my.000013.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
