load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000003",
    srcs = [
  "Module000003.module.ts",
  "my.000021.component.ts",
  "my.000022.component.ts",
  "my.000023.component.ts",
  "my.000024.component.ts",
  "my.000025.component.ts",
  "my.000026.component.ts",
  "my.000027.component.ts"
],
    angular_assets = [
  "my.000021.component.html",
  "my.000022.component.html",
  "my.000023.component.html",
  "my.000024.component.html",
  "my.000025.component.html",
  "my.000026.component.html",
  "my.000027.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
