load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000004",
    srcs = [
  "Module000004.module.ts",
  "my.000028.component.ts",
  "my.000029.component.ts",
  "my.000030.component.ts",
  "my.000031.component.ts",
  "my.000032.component.ts",
  "my.000033.component.ts",
  "my.000034.component.ts"
],
    angular_assets = [
  "my.000028.component.html",
  "my.000029.component.html",
  "my.000030.component.html",
  "my.000031.component.html",
  "my.000032.component.html",
  "my.000033.component.html",
  "my.000034.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
