load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000004",
    srcs = [
  "Module000004.module.ts",
  "my.000036.component.ts",
  "my.000037.component.ts",
  "my.000038.component.ts",
  "my.000039.component.ts",
  "my.000040.component.ts",
  "my.000041.component.ts",
  "my.000042.component.ts",
  "my.000043.component.ts",
  "my.000044.component.ts"
],
    angular_assets = [
  "my.000036.component.html",
  "my.000037.component.html",
  "my.000038.component.html",
  "my.000039.component.html",
  "my.000040.component.html",
  "my.000041.component.html",
  "my.000042.component.html",
  "my.000043.component.html",
  "my.000044.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
