load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000008",
    srcs = [
  "Module000008.module.ts",
  "my.000053.component.ts",
  "my.000054.component.ts",
  "my.000055.component.ts",
  "my.000056.component.ts",
  "my.000057.component.ts",
  "my.000058.component.ts"
],
    angular_assets = [
  "my.000053.component.html",
  "my.000054.component.html",
  "my.000055.component.html",
  "my.000056.component.html",
  "my.000057.component.html",
  "my.000058.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
