load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000008",
    srcs = [
  "Module000008.module.ts",
  "my.000071.component.ts",
  "my.000072.component.ts",
  "my.000073.component.ts",
  "my.000074.component.ts",
  "my.000075.component.ts",
  "my.000076.component.ts",
  "my.000077.component.ts",
  "my.000078.component.ts"
],
    angular_assets = [
  "my.000071.component.html",
  "my.000072.component.html",
  "my.000073.component.html",
  "my.000074.component.html",
  "my.000075.component.html",
  "my.000076.component.html",
  "my.000077.component.html",
  "my.000078.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
