load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000009",
    srcs = [
  "Module000009.module.ts",
  "my.000059.component.ts",
  "my.000060.component.ts",
  "my.000061.component.ts",
  "my.000062.component.ts",
  "my.000063.component.ts",
  "my.000064.component.ts"
],
    angular_assets = [
  "my.000059.component.html",
  "my.000060.component.html",
  "my.000061.component.html",
  "my.000062.component.html",
  "my.000063.component.html",
  "my.000064.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
