load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000010",
    srcs = [
  "Module000010.module.ts",
  "my.000065.component.ts",
  "my.000066.component.ts",
  "my.000067.component.ts",
  "my.000068.component.ts",
  "my.000069.component.ts",
  "my.000070.component.ts"
],
    angular_assets = [
  "my.000065.component.html",
  "my.000066.component.html",
  "my.000067.component.html",
  "my.000068.component.html",
  "my.000069.component.html",
  "my.000070.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
