load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000012",
    srcs = [
  "Module000012.module.ts",
  "my.000103.component.ts",
  "my.000104.component.ts",
  "my.000105.component.ts",
  "my.000106.component.ts",
  "my.000107.component.ts",
  "my.000108.component.ts",
  "my.000109.component.ts",
  "my.000110.component.ts"
],
    angular_assets = [
  "my.000103.component.html",
  "my.000104.component.html",
  "my.000105.component.html",
  "my.000106.component.html",
  "my.000107.component.html",
  "my.000108.component.html",
  "my.000109.component.html",
  "my.000110.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
