load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000013",
    srcs = [
  "Module000013.module.ts",
  "my.000091.component.ts",
  "my.000092.component.ts",
  "my.000093.component.ts",
  "my.000094.component.ts",
  "my.000095.component.ts",
  "my.000096.component.ts",
  "my.000097.component.ts"
],
    angular_assets = [
  "my.000091.component.html",
  "my.000092.component.html",
  "my.000093.component.html",
  "my.000094.component.html",
  "my.000095.component.html",
  "my.000096.component.html",
  "my.000097.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
