load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000013",
    srcs = [
  "Module000013.module.ts",
  "my.000111.component.ts",
  "my.000112.component.ts",
  "my.000113.component.ts",
  "my.000114.component.ts",
  "my.000115.component.ts",
  "my.000116.component.ts",
  "my.000117.component.ts",
  "my.000118.component.ts"
],
    angular_assets = [
  "my.000111.component.html",
  "my.000112.component.html",
  "my.000113.component.html",
  "my.000114.component.html",
  "my.000115.component.html",
  "my.000116.component.html",
  "my.000117.component.html",
  "my.000118.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
