load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000016",
    srcs = [
  "Module000016.module.ts",
  "my.000101.component.ts",
  "my.000102.component.ts",
  "my.000103.component.ts",
  "my.000104.component.ts",
  "my.000105.component.ts",
  "my.000106.component.ts"
],
    angular_assets = [
  "my.000101.component.html",
  "my.000102.component.html",
  "my.000103.component.html",
  "my.000104.component.html",
  "my.000105.component.html",
  "my.000106.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
