load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000016",
    srcs = [
  "Module000016.module.ts",
  "my.000135.component.ts",
  "my.000136.component.ts",
  "my.000137.component.ts",
  "my.000138.component.ts",
  "my.000139.component.ts",
  "my.000140.component.ts",
  "my.000141.component.ts",
  "my.000142.component.ts"
],
    angular_assets = [
  "my.000135.component.html",
  "my.000136.component.html",
  "my.000137.component.html",
  "my.000138.component.html",
  "my.000139.component.html",
  "my.000140.component.html",
  "my.000141.component.html",
  "my.000142.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
